<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorPrimary"
    >
    <include
        android:id="@+id/UserPro_titlie_bar"
        layout="@layout/app_bar_layout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_below="@+id/UserPro_titlie_bar"
        android:id="@+id/dp1lnr"
        android:orientation="horizontal"
        android:background="@android:color/black"
        tools:ignore="SmallSp" />



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@+id/dp1lnr"
        android:id="@+id/ShowProfile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_centerHorizontal="true"

        app:civ_border_color="@android:color/black"
        app:civ_border_width="2dp"
        android:src="@drawable/profilemiga"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ShowUsNm"
        android:layout_below="@+id/ShowProfile_image"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@android:color/white"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"


        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ShowStNm"
        android:layout_below="@+id/ShowUsNm"
        android:layout_marginStart="15dp"
        android:textColor="@android:color/white"
        android:text="@string/user_status"
        android:textSize="16sp"
        android:layout_marginTop="9dp"



        >

    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ShowStNm"
        android:orientation="horizontal"

        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >


    <Button
        android:id="@+id/FrndReqBt"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:layout_marginTop="19dp"
        android:layout_weight="1"
        android:text="@string/add_friend"
        android:textStyle="bold"
        android:textSize="17sp"
        android:gravity="center_horizontal"

        android:textColor="@android:color/white"
        android:padding="9dp"
        tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/FrndReqDclnBt"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:layout_marginTop="19dp"
            android:layout_weight="1"
            android:text="@string/decline_request"
            android:textStyle="bold"
            android:textSize="17sp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:padding="9dp"
            android:visibility="gone"


            tools:ignore="ButtonStyle" />
    </LinearLayout>


</RelativeLayout>