<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsFrgament">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/setting_titlie_bar">


        <LinearLayout
            android:id="@+id/settingsrelative"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_below="@+id/settingslinelnr"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ScrollViewLNR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/holdercircleimageLnr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:id="@+id/circleimageLnr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/setprofile_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"

                            android:src="@drawable/profilemiga"
                            app:civ_border_color="@android:color/black"
                            app:civ_border_width="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/set_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:gravity="center_horizontal"
                            android:text="@string/username"
                            android:textColor="@android:color/white"
                            android:textSize="18sp">

                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:baselineAligned="false"
                            android:gravity="center_horizontal"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/posts"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/_100"
                                    android:textColor="@android:color/white"
                                    android:textSize="14sp"

                                    />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/followers"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/_1_1k"
                                    android:textColor="@android:color/white"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/following"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp"


                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:text="@string/_38"
                                    android:textColor="@android:color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>


                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/set_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/hellow_i_m_new_here"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"


                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shadow_bg"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:id="@+id/settingsbuttunLNR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/Done1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/buttons"
                            android:text="@string/edite_profile"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="ButtonStyle" />


                        <Button
                            android:id="@+id/set_updatebut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/buttons"
                            android:text="@string/update"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:ignore="ButtonStyle" />

                    </LinearLayout>


                    <ListView
                        android:id="@+id/SettingsListview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/settingslinelnr"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow_bg"
            android:orientation="vertical" />

    </RelativeLayout>


</RelativeLayout>
