<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="5dp"

        android:background="@color/colorPrimary"
        android:id="@+id/main"



        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:id="@+id/NsFdMainLin"
            android:layout_margin="7dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:id="@+id/image_profile"
                android:src="@drawable/profilemiga"
                android:padding="5dp"
                android:layout_marginTop="5dp"

                />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/user_name"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/Atwhite"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="14dp"
                    android:id="@+id/username"
                    android:layout_weight="1"

                    >
                </TextView>


















            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:textColor="@color/Mygray"
            android:id="@+id/description"
            android:padding="8dp"
            >
        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/main" />
    <LinearLayout
        android:id="@+id/newsfeedlinr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/main"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/colorPrimary"
                android:id="@+id/Post_image"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="1.5dp"

                tools:ignore="ContentDescription">

            </ImageView>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ComtEtLnr"
                android:orientation="horizontal"
                android:background="@drawable/buttons"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"


                tools:ignore="UselessParent">

                <ImageButton
                    android:id="@+id/x"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/x"
                    android:background="@drawable/ovel"
                    tools:ignore="ContentDescription" />


                <EditText

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/CmtEtx"
                    android:inputType="textMultiLine"
                    android:hint="@string/type_comment"
                    android:textSize="20sp"
                    android:background="@drawable/left_curve"
                    android:layout_weight="1"

                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"


                    tools:ignore="Autofill" />


                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/Chat_sendButton"
                    android:src="@drawable/mic"
                    android:background="@drawable/right_curve"

                    tools:ignore="ContentDescription" />








            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/NsFdLikeCmtShare"




            >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:src="@drawable/like"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:id="@+id/likeImag"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/commentimgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:src="@drawable/comments"
                android:layout_margin="5dp"


                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:src="@drawable/up"
                android:layout_margin="5dp"
                android:id="@+id/up"


                tools:ignore="ContentDescription">

            </ImageView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:id="@+id/Likestext"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:id="@+id/Commentstext"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"


                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:id="@+id/Sharetext"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"


                >
            </TextView>

        </LinearLayout>








    </LinearLayout>


</RelativeLayout>